--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "## Introduction",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon --require dotenv/config index.js",
+    "start" : "nodemon --require dotenv/config index.js"
   },
   "repository": {
     "type": "git",
